# http-client-patient

./: CHANGELOG.md  LICENSE  http-client-patient.cabal
src/Network/HTTP/Client/: Patient.hs
