cabal-version:      3.4
name:               http-client-patient
version:            0.1.0.0
synopsis:           respect 429 headers automatically
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Mark Wotton
maintainer:         mwotton@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Network.HTTP.Client.Patient
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.18.2.1,
                      network,
                      case-insensitive,
                      containers,
                      http-types,
                      stm,
                      network-uri,
                      uuid,
                      bytestring,
                      http-client,
                      time,
                      lifted-base,
                      monad-control
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite http-client-patient-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        http-client-patient
